# UnconfRS

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  apache2-unconfrs.conf  askama.toml  compose.yaml  gen-password.bash  gen-password.sh  gen-user.bash  generate_bcrypt_password_hash.sh  nginx-unconfrs.conf  sched.pseu  startup.sh  update-password.bash  update-unconference-password.bash
.sqlx/: query-01dd595bf877e9bdc0dc8704dbe7389ff6716e45332f87a3f32d533c95d6ced4.json  query-07f922d777dac0d525a926f2e25940d279ffbb745371cc56ff35a4f15ad3a681.json  query-0bb95cf3569447ca477d40b124db38e036ae9412d88116eff33ef1a06654b16a.json  query-0bd1c98ff3bb48727678a6a437678a47607dbac37b68ad25fe090fc717cf3da8.json  query-11439d6271fb380d2806284b89740dab6c862ba6c5edda00f27f24566d53dbf6.json  query-15658fc3611d82a860da36bd2aca22c7675861753ab29a6ccd1c1bb5fd33fb9a.json  query-1a644101c0e6c5f7560c77bfec2a605218c8781413e0e9e0fcd9362917fb61c7.json  query-1a68432fb863a93252e1a37b3754862014280f22dbacd9a75fb19af53edcd4d9.json  query-1d4914c53ca71aeadb60ec0985087de8440134815508fc1259b84d4a5445b51f.json  query-1f31bb70d94fe8d375419a4bb7e418b729d54e2737695eb2d5e94089cfa3cd2b.json  query-214722097592a78998bf22f929d830712f78f6881069bcf2ca0233cea02f6f2e.json  query-22777249a5c6a81a7ec5472b222dfa1de0f3a1603e4601c973d97804740f9cee.json  query-227ae36f79a6039423414a0b89974ac0cb8cecd7bbbdc44f60d01ebd78673c73.json  query-2f81f2fa0a15a94bebcfd506878d58c3a93b779148d59828b49a9e306af37803.json  query-2ff004412294e97e87d8bfe7905f33c0a1607a554b2edd5d7d6ab3d2227ac211.json  query-32760d9b240c583ebfac376c56ae41cf2c897cbae988618e54362d2d54840b4e.json  query-33e7d629af8116b1d45d358aa12a9ce956e3f8a32cc5d561edfd7cdbbacc638e.json  query-3a6a5ee43a2c0ecdb80d313183d3dfdb5f795409757cba3508917cd3da236a19.json  query-403f702218466d3751e11ed11ef2a296c3794ddd73a38457cabd59817a555508.json  query-4637da42c543efc51ea265109d77cbab7aad1cf33d22095f327d962001043a4e.json  query-499ca8b4750836ad6b1b8bf4a4cd7eb71680698f0e000759242d601c3e9f5fea.json  query-49bc9476b8052452391296ccc01e2a7e60c53a95b45035f04dd0d4152cb0d7f2.json  query-52958684fa52b7a4753cd4356482dc6c655102a501d8aa48e03b1fb3dbbad02d.json  query-53ba03ed93ebb7900cfa5771a2ffadb807b91a09eb44e8c3bde9966ee5620249.json  query-65db98ba9e2433f6c6c2bf251dd6115238c828817840ed6ae321133249248583.json  query-6b53143893c6e9a894db8485eb5b2c279d0bf00cc80549eb1db7df5fd0da6a30.json  query-7899c4fe1a2021cd0dd0ae4e695dce9ebbdc622c62b292c8569215e38bb14a76.json  query-7a58911df4cc1d250f9e34054a6f39796a269b013d0ce33b4235fbad24c26fb2.json  query-7f0cf5c298bcfaa2f7e6f3858a8d27ab2825b9d2bd4665f6a844f2b7fd5c0ed7.json  query-8083cce16b71ea3b189fbac4211c6954da162dc4416d966ded709eb221190ec7.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-84c9268cda23d37124136a8bfe54baf660f56af2e643dcea9587910bfd52b77f.json  query-850deb864eaa7c2b7a5d790f4b4787a3c1aa044cdf3eeaea2f1af81699a40656.json  query-8525ad35cb3408a218aadac9811c2cbc88ef4a62288c3dc7f3773b21cf7dd6fd.json  query-868d9afec4901a3d5bddbe334dad9cdbfbad38e0ec7951053c23cfa9e284fe93.json  query-896f84565c39e08093e38cf61871d192593c97d17994b455d4eb12b1bfe05ea6.json  query-8a218f26c97fec06d1b1eb6e5a6a73bcdcaa48df7ea63dc4dab1356b54fa8426.json  query-94c1db02a376c565ed7309bd7f10ae9af7302ac7603af9f3fb454950fe861e44.json  query-9bf2d4532c6732e977aeb786a7287b913cd8adee5fb206b77c2ecd102c7f741a.json  query-9d8326947c073ea53cb29905fc3e0032430e7af408dbcbff4b2f5d9d85e5b8ce.json  (+23 more)
config/: first-run.sh  nginx-unconfrs.conf  run.sh  unconfrs-app.service  unconfrs.service  update-password.bash
docs/: APACHE2.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCKER-two-container.md  DOCKER.md  SETUP.md  SYSTEMD.md  USER_GUIDE.md
migrations/: 0001_create_initial_tables.down.sql  0001_create_initial_tables.up.sql  0001_create_tables.down.sql  0001_create_tables.up.sql  0002_add_unique_session_id.down.sql  0002_create_tables.down.sql  0002_create_tables.up.sql  0003_create_tables.down.sql  0003_create_tables.up.sql  0004_create_tables.down.sql  0004_create_tables.up.sql
server/: Cargo.toml
server/migrations/: 0001_create_initial_tables.up.sql  0002_add_unique_session_id.up.sql  0003_create_tags_tables.down.sql  0003_create_tags_tables.up.sql  0004_add_conference_config.down.sql  0004_add_conference_config.up.sql  0005_add_index_markdown.down.sql  0005_add_index_markdown.up.sql
server/src/: db_config.rs  init.rs  lib.rs  main.rs
server/src/controllers/: index_handler.rs  login_handler.rs  mod.rs  registration_handler.rs  room_handler.rs  schedule_handler.rs  session_tags_handler.rs  session_voting_handler.rs  sessions_handler.rs  site_handler.rs  tags_handler.rs  timeslot_handler.rs
server/src/middleware/: auth.rs  conference_password.rs  mod.rs  unauth.rs  unconference_password.rs
server/src/models/: auth_model.rs  index_model.rs  mod.rs  schedule_model.rs  session_tags_model.rs  session_voting_model.rs  sessions_model.rs  tags_model.rs  timeslot_assignment_model.rs  timeslot_model.rs
server/src/routes/: api_routes.rs  docs_routes.rs  site_routes.rs
server/src/types/: mod.rs  status_code.rs
server/web/scripts/: display_schedule.js  nav.js  sessions.js  utils.js
server/web/scripts/admin/: admin_display_schedule.js  admin_or_staff_sessions.js
server/web/styles/: display_schedule.css  nav.css  rooms_form.css
server/web/templates/: base.html  conference_password.html  config.html  create_schedule.html  index.html  login.html  nav.html  registration.html  rooms.html  sessions.html  unconf_timeslots.html  unconference_password.html  users.html
server/web/templates/snippets/: display_schedule.html  rooms_form.html  session_form_fields.html
test_unconf/: Cargo.toml
test_unconf/src/: main.rs
(+90 files in other folders)
