[package]
name = "Unconfrs"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14.0", features = ["serde_json"] }
axum = { version = "0.8.4", features = ["macros", "form"] }
axum-macros = "0.5.0"
axum-login = "0.17.0"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "json"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["compression-gzip", "cors", "fs", "trace"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
async-trait = "0.1.88"